--- a/timer.css
+++ b/timer.css
@@ -88,3 +88,22 @@
   animation-duration: .7s;
   animation-delay: .7s;
 }
+
+#popup {
+  background-size: cover;
+  background-color:white;
+    position: fixed;
+    display: block;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 1;
+}
+
+#stand-img {
+position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
