--- a/timer.css
+++ b/timer.css
@@ -112,7 +112,7 @@ body {
 
 #popup {
   background-size: cover;
-  background-color: #fef9f9;
+  background-color: white;
   position: fixed;
   display: block;
   left: 0;
@@ -127,4 +127,6 @@ body {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 60px;
+  height: 60px;
 }
