--- a/timer.css
+++ b/timer.css
@@ -31,6 +31,7 @@ dd {
 
 /* Set core body defaults */
 body {
+  font-family: "Avenir Next";
   min-height: 100vh;
   scroll-behavior: smooth;
   text-rendering: optimizeSpeed;
@@ -48,10 +49,6 @@ h1 {
   font-weight: lighter;
   text-align: center;
   color: #1b242f;
-}
-
-body {
-  font-family: Arial, Helvetica, sans-serif;
 }
 
 .time {
