--- a/timer.css
+++ b/timer.css
@@ -46,13 +46,14 @@ ol[class] {
 
 h1 {
   font-size: 20px;
-  font-weight: lighter;
+  font-weight: bold;
   text-align: center;
   color: #1b242f;
 }
 
 .time {
   font-size: 70px;
+  font-weight: bold;
 }
 
 .wrapper {
